@@ -20,10 +20,12 @@ public:
   CTexture(LPDIRECT3DTEXTURE8 pTexture, int iWidth, int iHeight, bool bPacked, int iDelay = 100, LPDIRECT3DPALETTE8 pPalette = NULL);
   virtual ~CTexture();
   bool Release();
-  LPDIRECT3DTEXTURE8 GetTexture(int& iWidth, int& iHeight, LPDIRECT3DPALETTE8& pPal);
+  LPDIRECT3DTEXTURE8 GetTexture(int& iWidth, int& iHeight, LPDIRECT3DPALETTE8& pPal, bool &linearTexture);
   int GetDelay() const;
   int GetRef() const;
   void Dump() const;
+  void ReadTextureInfo();
+  DWORD GetMemoryUsage() const;
   void SetDelay(int iDelay);
   void Flush();
   void SetLoops(int iLoops);
@@ -39,6 +41,8 @@ protected:
   int m_iHeight;
   int m_iLoops;
   bool m_bPacked;
+  D3DFORMAT m_format;
+  DWORD m_memUsage;
 };
 
 /*!
@@ -53,13 +57,14 @@ public:
   virtual ~CTextureMap();
   const CStdString& GetName() const;
   int size() const;
-  LPDIRECT3DTEXTURE8 GetTexture(int iPicture, int& iWidth, int& iHeight, LPDIRECT3DPALETTE8& pPal);
+  LPDIRECT3DTEXTURE8 GetTexture(int iPicture, int& iWidth, int& iHeight, LPDIRECT3DPALETTE8& pPal, bool &linearTexture);
   int GetDelay(int iPicture = 0) const;
   int GetLoops(int iPicture = 0) const;
   void Add(CTexture* pTexture);
   bool Release(int iPicture = 0);
   bool IsEmpty() const;
   void Dump() const;
+  DWORD GetMemoryUsage() const;
   void Flush();
 protected:
   CStdString m_strTextureName;
@@ -82,12 +87,13 @@ public:
   void EndPreLoad();
   void FlushPreLoad();
   int Load(const CStdString& strTextureName, DWORD dwColorKey = 0);
-  LPDIRECT3DTEXTURE8 GetTexture(const CStdString& strTextureName, int iItem, int& iWidth, int& iHeight, LPDIRECT3DPALETTE8& pPal);
+  LPDIRECT3DTEXTURE8 GetTexture(const CStdString& strTextureName, int iItem, int& iWidth, int& iHeight, LPDIRECT3DPALETTE8& pPal, bool &linearTexture);
   int GetDelay(const CStdString& strTextureName, int iPicture = 0) const;
   int GetLoops(const CStdString& strTextureName, int iPicture = 0) const;
   void ReleaseTexture(const CStdString& strTextureName, int iPicture = 0);
   void Cleanup();
   void Dump() const;
+  DWORD GetMemoryUsage() const;
   void Flush();
   CStdString GetTexturePath(const CStdString& textureName);
   void GetBundledTexturesFromPath(const CStdString& texturePath, std::vector<CStdString> &items);
